run multi-member with top-up

--- a/public/index.html
+++ b/public/index.html
@@ -40,24 +40,15 @@
               on my blog.
             </p>
             <p>
-              This is an experiment where we consider what might happen if we elected our MPs the
-              same way we elected our MEPs. We have the data we need to simulate this, because the
-              method of making a selection is the same, but instead of having 1 MP to represent an
-              area, we can imagine having many. In this experiment, I've combined our existing
-              constituency boundaries into new constituencies, which overall elect 600 MPs to
-              Parliament (the number proposed under the most recent electoral reform), but each
-              constituency elects on average 8 MPs. In theory, this should result in a more
-              representative parliament, but one where coalition governments become common, as it
-              makes it harder for a government to get a majority, unless they also get a majority of
-              the votes, which rarely happens.
-            </p>
-            <p>
-              There are, of course, caveats. We can assume some people may vote differently if the
-              system was different, there may be less tactical voting, for example. The boundaries
-              I've crudely drawn are simply the same as existing constituencies added together, but
-              in the real world, a lot more care and attention would go into the boundaries. I've
-              also invented some new names, and I didn't put too much thought into it, so please
-              don't complain too much if the name doesn't make sense.
+              This webpage attempts to simulate how the results of the 2019 elections might have
+              looked if we used different systems of proportional representation, whilst retaining a
+              geographic link between an MP and an area. There are, of course, caveats. We can
+              assume some people may vote differently if the system was different, there may be less
+              tactical voting, for example. The boundaries I've crudely drawn are simply the same as
+              existing constituencies added together, but in the real world, a lot more care and
+              attention would go into the boundaries. I've also invented some new names, and I
+              didn't put too much thought into it, so please don't complain too much if the name
+              doesn't make sense.
             </p>
           </div>
         </div>
